<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/text_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/register"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/text_nmdepan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_nmdepan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/nama_depan"
            app:layout_constraintBottom_toTopOf="@+id/edit_nmdepan"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_nmdepan"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/text_nmblakang"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/text_nmblakang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/nama_belakang"
            app:layout_constraintBottom_toTopOf="@+id/edit_nmblakang"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_nmblakang"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/text_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/username"
            app:layout_constraintBottom_toTopOf="@+id/edit_username"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/edit_email"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_notelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/nomor_telepon"
            app:layout_constraintBottom_toTopOf="@+id/edit_notelp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_psswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/edit_psswd"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_kpsswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/konfirmasi_password"
            app:layout_constraintBottom_toTopOf="@+id/edit_kpsswd"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/text_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/text_notelp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edit_notelp"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@+id/text_psswd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edit_psswd"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/text_kpsswd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edit_kpsswd"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/btn_daftar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:text="@string/daftar"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_kembali"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_kembali"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button2"
            android:text="@string/kembali"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>